Add content for joint inversion

--- a/docs/case_studies/Forrestania/forrestania.ipynb
+++ b/docs/case_studies/Forrestania/forrestania.ipynb
@@ -5,15 +5,32 @@
    "id": "34c04eea-4ec5-468f-90aa-0f4bea2b44f3",
    "metadata": {},
    "source": [
-    "<p style=\"page-break-after:always;\"></p>\n",
-    "\n",
     "# Forrestania (Joint Grav/Mag)\n",
     "\n",
-    "This uses public data downloaded from the [Geological Survey of Western Australia](https://portal.ga.gov.au/persona/gadds) over the Forrestania geological province.\n",
+    "```{figure} ./images/landing.png\n",
+    "---\n",
+    "scale: 30%\n",
+    "align: right\n",
+    "---\n",
+    "```\n",
     "\n",
+    "This case study focuses on the standalone and joint inversion of ground gravity and airborne magnetic data. It uses public data downloaded from the [Geological Survey of Western Australia](https://portal.ga.gov.au/persona/gadds) over the Forrestania geological province. We cover the following steps\n",
     "\n",
+    "- [Data imports and pre-processing](forrestania-data)\n",
+    "- [Standalone inversion of gravity data](forrestania-gravity)\n",
+    "- [Standalone inversion of magnetic data](forrestania-magnetics)\n",
+    "- [Joint cross-gradient inversion](forrestania-joint)\n",
+    "- [K-means clustering analysis](forrestania-kmeans)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4638415a-bea8-4c31-b467-79cb864aeba9",
+   "metadata": {},
+   "source": [
     "## Geological setting\n",
-    "\n"
+    "\n",
+    "To be completed..."
    ]
   },
   {
@@ -21,15 +38,18 @@
    "id": "7463eea7-04b6-466a-aa35-58269605c353",
    "metadata": {},
    "source": [
+    "(forrestania-data)=\n",
     "## Data\n",
     "\n",
-    "We first need to consolidate the data into a usable format. We use [Geoscience ANALYST](https://www.mirageoscience.com/mining-industry-software/geoscience-analyst/) to import and convert the original file formats into `geoh5`. This can be done with a simple `drag & drop` to the viewport. The data bundle includes\n",
+    "[Download the data package here](https://github.com/MiraGeoscience/simpeg-drivers/raw/refs/heads/GEOPY-2297/simpeg_drivers-assets/Case%20studies/Forrestania_SRTM1%20Australia_MGA50.zip?download=)\n",
+    "\n",
+    "We first need to consolidate the data into a usable format. We use [Geoscience ANALYST](https://www.mirageoscience.com/mining-industry-software/geoscience-analyst/) to import and convert the original files into the `geoh5` format. The data bundle includes\n",
     "\n",
     " - Airborne magnetic survey: `60472_AOI4.gdb`\n",
     " - Ground gravity survey: `Forrestania_Gravity_Station_trim_.csv`\n",
     " - Digital Elevation Model (DEM): `Forrestania_SRTM1 Australia_MGA50.ers`\n",
     "\n",
-    "Once imported, the data can be activated for visualization.  \n",
+    "This can be done with a simple `drag & drop` to the viewport, or one at a time through the import menu. Once imported, the data can be activated for visualization.  \n",
     "\n",
     "```{figure} ./images/data_import.png\n",
     "---\n",
@@ -74,6 +94,7 @@
    "id": "dd15a36f",
    "metadata": {},
    "source": [
+    "(forrestania-gravity)=\n",
     "## Gravity\n",
     "\n",
     "We begin our analysis with the ground gravity survey. We will attempt to estimate the shape and depth of the causative body at depth.\n",
@@ -134,6 +155,7 @@
    "id": "20c39e9c-c7a5-4610-9c60-cac1e955fb19",
    "metadata": {},
    "source": [
+    "(forrestania-magnetics)=\n",
     "## Magnetics\n",
     "\n",
     "We follow up with the processing of the airborne magnetic data.\n",
@@ -259,18 +281,72 @@
    "id": "bfabe262-1769-450a-bd8d-4a48de0ea408",
    "metadata": {},
    "source": [
+    "(forrestania-joint)=\n",
     "## Joint cross-gradient\n",
     "\n",
-    "After inverting the gravity and magnetic data independently, and recovering anomalies with similar shapes and positions in both, the next step is to invert both datasets jointly. We are going to employ the cross-gradient constraint to promote alignment of edges in the density and susceptibility models. "
+    "After inverting the gravity and magnetic data independently, and recovering anomalies with similar shapes and positions in both, the next step is to invert both datasets jointly. We are going to employ the cross-gradient constraint to promote alignment of edges in the density and susceptibility models. \n",
+    "\n",
+    "### Inversion options\n",
+    "\n",
+    "The following options are set for the inversion.\n",
+    "\n",
+    "```{figure} ./images/joint_setup.png\n",
+    "---\n",
+    "scale: 10%\n",
+    "---\n",
+    "[Click to enlarge]\n",
+    "```\n",
+    "\n",
+    "- Select the two existing inversion groups (magnetic and gravity) to Group A and B.\n",
+    "- Leave the mesh option empty. The routine will generate *an inversion mesh* based on the best resolution from both the gravity and magnetic problems.\n",
+    "- Set the topography\n",
+    "\n",
+    "### Results\n",
+    "\n",
+    "After completion of the inversion, we load the results\n",
+    "\n",
+    "```{figure} ./images/joint_lp_model.png\n",
+    "```\n",
+    "\n",
+    "We note the following:\n",
+    "\n",
+    "- The shape of the density and magnetic susceptibility models match closely near the main anomaly.\n",
+    "- Some of the smaller anomalies, as well as an extension to the north-east, are only seen in the density model.\n",
+    "\n",
+    "(forrestania-kmeans)=\n",
+    "## Analysis\n",
+    "\n",
+    "The joint inversion results highlight a few features that could be distinguished by their physical property contrasts.\n",
+    "After running a K-means clustering on the final models, we recover the following simplified petrophysical model with 4 units.\n",
+    "\n",
+    "```{figure} ./images/joint_kmeans.png\n",
+    "```\n",
+    "\n",
+    "This table summarizes the different units based on their mean density and susceptibility values. \n",
+    "\n",
+    "```{table} Summary of expected physical properties\n",
+    "| Unit | Susceptibility | Density |\n",
+    "| :--- | :--- | :---- |\n",
+    "| background |  low    | low      |\n",
+    "| A |  high    | high      |\n",
+    "| B |  low    | high      |\n",
+    "| C |  high | low |\n",
+    "```"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2932d2a-285d-4fa0-908c-1ab3eaa844b4",
+   "cell_type": "markdown",
+   "id": "5d4d7ea6-cfc7-4e4a-9eb5-4125cc972250",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Summary\n",
+    "\n",
+    "- We have inverted publicly available data over the Forrestania geological province.\n",
+    "\n",
+    "- The joint cross-gradient method was successfull in promoting similarities between the different physical properties wherever possible.\n",
+    "\n",
+    "- Our results suggest the presence of different geological units with distinct density and magnetic susceptibility signatures.\n"
+   ]
   }
  ],
  "metadata": {
