Add notebook for Pure python version of example

--- a/docs/case_studies/Forrestania/forrestania_noGA.ipynb
+++ b/docs/case_studies/Forrestania/forrestania_noGA.ipynb
@@ -5,7 +5,7 @@
    "id": "34c04eea-4ec5-468f-90aa-0f4bea2b44f3",
    "metadata": {},
    "source": [
-    "# Forrestania: Gravity & Magnetics (ANALYST Pro Geophysics)\n",
+    "# Forrestania: Gravity & Magnetics (Pure Python)\n",
     "\n",
     "```{figure} ./images/landing.png\n",
     "---\n",
@@ -14,13 +14,13 @@
     "---\n",
     "```\n",
     "\n",
-    "This case study focuses on the standalone and joint inversion of ground gravity and airborne magnetic data. It uses public data downloaded from the [Geological Survey of Western Australia](https://portal.ga.gov.au/persona/gadds) over the Forrestania geological province. We cover the following steps\n",
+    "This case study focuses on the standalone and joint inversion of ground gravity and airborne magnetic data, all using open-source libraries. It uses public data downloaded from the [Geological Survey of Western Australia](https://portal.ga.gov.au/persona/gadds) over the Forrestania geological province. We cover the following steps\n",
     "\n",
-    "- [Data imports and pre-processing](forrestania-data)\n",
-    "- [Standalone inversion of gravity data](forrestania-gravity)\n",
-    "- [Standalone inversion of magnetic data](forrestania-magnetics)\n",
-    "- [Joint cross-gradient inversion](forrestania-joint)\n",
-    "- [K-means clustering analysis](forrestania-kmeans)"
+    "- [Data imports and pre-processing](forrestania-data-os)\n",
+    "- [Standalone inversion of gravity data](forrestania-gravity-os)\n",
+    "- [Standalone inversion of magnetic data](forrestania-magnetics-os)\n",
+    "- [Joint cross-gradient inversion](forrestania-joint-os)\n",
+    "- [K-means clustering analysis](forrestania-kmeans-os)"
    ]
   },
   {
@@ -38,26 +38,46 @@
    "id": "7463eea7-04b6-466a-aa35-58269605c353",
    "metadata": {},
    "source": [
-    "(forrestania-data)=\n",
+    "(forrestania-data-os)=\n",
     "## Data\n",
     "\n",
-    "[Download the data package here](https://github.com/MiraGeoscience/simpeg-drivers/raw/refs/heads/GEOPY-2297/simpeg_drivers-assets/Case%20studies/Forrestania_SRTM1%20Australia_MGA50.zip?download=)\n",
+    "[Download the data package here](https://github.com/MiraGeoscience/simpeg-drivers/raw/refs/heads/GEOPY-2297/simpeg_drivers-assets/Case%20studies/Forrestania_SRTM1%20Australia_MGA50_CSV.zip?download=)\n",
     "\n",
-    "We first need to consolidate the data into a usable format. We use [Geoscience ANALYST](https://www.mirageoscience.com/mining-industry-software/geoscience-analyst/) to import and convert the original files into the `geoh5` format. The data bundle includes\n",
+    "We first need to import the data into a usable format.\n",
     "\n",
-    " - Airborne magnetic survey: `60472_AOI4.gdb`\n",
+    " - Airborne magnetic survey: `60472_AOI4.csv`\n",
     " - Ground gravity survey: `Forrestania_Gravity_Station_trim_.csv`\n",
-    " - Digital Elevation Model (DEM): `Forrestania_SRTM1 Australia_MGA50.ers`\n",
-    "\n",
-    "This can be done with a simple `drag & drop` to the viewport, or one at a time through the import menu. Once imported, the data can be activated for visualization.  \n",
-    "\n",
-    "```{figure} ./images/data_import.png\n",
-    "---\n",
-    "name: data_import\n",
-    "---\n",
-    "Data imported from their original format to `geoh5` for visualization.\n",
-    "```\n",
-    "\n",
+    " - Digital Elevation Model (DEM): `Forrestania_SRTM1 Australia_MGA50.tiff`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f2e41088-e8ae-4507-a4be-b449b9abbdbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'geoh5y'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgeoh5y\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgp\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'geoh5y'"
+     ]
+    }
+   ],
+   "source": [
+    "import geoh5y as gp\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "064b0497-6e67-43ac-b0c5-ce82d1651b2e",
+   "metadata": {},
+   "source": [
     "### Processing\n",
     "\n",
     "Note that both the DEM and airborne magnetic survey were imported at an arbitrary 0 m elevation and do not reflect the true position.\n",
@@ -85,8 +105,7 @@
     "scale: 10%\n",
     "---\n",
     "[Click to enlarge]\n",
-    "```\n",
-    "\n"
+    "```\n"
    ]
   },
   {
@@ -94,7 +113,7 @@
    "id": "dd15a36f",
    "metadata": {},
    "source": [
-    "(forrestania-gravity)=\n",
+    "(forrestania-gravity-os)=\n",
     "## Gravity\n",
     "\n",
     "We begin our analysis with the ground gravity survey. We will attempt to estimate the shape and depth of the causative body at depth.\n",
@@ -155,7 +174,7 @@
    "id": "20c39e9c-c7a5-4610-9c60-cac1e955fb19",
    "metadata": {},
    "source": [
-    "(forrestania-magnetics)=\n",
+    "(forrestania-magnetics-os)=\n",
     "## Magnetics\n",
     "\n",
     "We follow up with the processing of the airborne magnetic data.\n",
@@ -281,7 +300,7 @@
    "id": "bfabe262-1769-450a-bd8d-4a48de0ea408",
    "metadata": {},
    "source": [
-    "(forrestania-joint)=\n",
+    "(forrestania-joint-os)=\n",
     "## Joint cross-gradient\n",
     "\n",
     "After inverting the gravity and magnetic data independently, and recovering anomalies with similar shapes and positions in both, the next step is to invert both datasets jointly. We are going to employ the cross-gradient constraint to promote alignment of edges in the density and susceptibility models. \n",
