--- a/docs/case_studies/Forrestania/forrestania.ipynb
+++ b/docs/case_studies/Forrestania/forrestania.ipynb
@@ -24,15 +24,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "4638415a-bea8-4c31-b467-79cb864aeba9",
-   "metadata": {},
-   "source": [
+  "cell_type": "markdown",
+  "id": "4638415a-bea8-4c31-b467-79cb864aeba9",
+  "metadata": {},
+  "source": [
     "## Geological setting\n",
     "\n",
-    "To be completed..."
-   ]
-  },
+    "The Forrestania Greenstone Belt (FGB), located in the Youanmi Terrane of the Eastern Yilgarn Craton, hosts significant Ni-Cu-PGE mineralisation, primarily within komatiitic units (Frost, 2003; Collins et al., 2012). The belt is structurally complex, featuring synclines, faults, and shear zones that play a key role in sulphide localisation. It is bounded by granitic and gneissic basement, intruded by monzogranite and granodiorite, and transected by Proterozoic dolerite dykes (Perring et al., 1995). Multiple deformation events have remobilised nickel sulphides from their original host rocks into footwall sediments and granitic intrusions, resulting in both typical and atypical mineralisation styles, including granite-hosted sulphides (Collins et al., 2012).\n",
+    "\n",
+    "The study area is underlain mainly by granitic rocks, forming the basement to the Parker-Range–Hatters Hill greenstone belt immediately to the east. This N–S-trending belt is the main regional host of nickel sulphide deposits, which occur within narrow ultramafic units in an Archaean sequence of metabasalts and sulphidic sediments. Notable nearby deposits include Beautiful Sunday, Flying Fox, and New Morning.\n",
+    "\n",
+    "A prominent high-magnetic anomaly, trending E–W to ENE–WSW, lies immediately west of the greenstone belt. The anomaly’s orientation, strength, and coincident elevated nickel-in-soil geochemistry suggest it may represent a mafic intrusion—making it a key target for the current geophysical inversion."
+  ]
+},
   {
    "cell_type": "markdown",
    "id": "7463eea7-04b6-466a-aa35-58269605c353",
@@ -345,7 +349,16 @@
     "\n",
     "- The joint cross-gradient method was successfull in promoting similarities between the different physical properties wherever possible.\n",
     "\n",
-    "- Our results suggest the presence of different geological units with distinct density and magnetic susceptibility signatures.\n"
+    "- Our results suggest the presence of different geological units with distinct density and magnetic susceptibility signatures.\n",
+    "\n",
+    "## References\n",
+    "\n",
+    "Collins, J. E., Hagemann, S. G., McCuaig, T. C., & Frost, K. M. (2012). Structural controls on sulfide mobilization at the high-grade Flying Fox Ni-Cu-PGE sulfide deposit, Forrestania Greenstone Belt, Western Australia. *Economic Geology*, 107(7), 1433–1455. https://doi.org/10.2113/econgeo.107.7.1433\n",
+    "\n",
+    "Frost, K. M. (2003). Geology and nickel sulfide deposits of the Forrestania Greenstone Belt, Western Australia. *Mineralium Deposita*, 38(6), 648–663.\n",
+    "\n",
+    "Perring, C. S., Barnes, S. J., & Hill, R. E. T. (1995). The Widgiemooltha dike suite: Geochemistry, emplacement, and implications for the evolution of the Eastern Goldfields Province, Western Australia. *Australian Journal of Earth Sciences*, 42(5), 489–502."
+    "\n"
    ]
   }
  ],
