--- a/docs/case_studies/Forrestania/forrestania_noGA.ipynb
+++ b/docs/case_studies/Forrestania/forrestania_noGA.ipynb
@@ -14,13 +14,13 @@
     "---\n",
     "```\n",
     "\n",
-    "This case study focuses on the standalone and joint inversion of ground gravity and airborne magnetic data, all using open-source libraries. It uses public data downloaded from the [Geological Survey of Western Australia](https://portal.ga.gov.au/persona/gadds) over the Forrestania geological province. We cover the following steps\n",
+    "This case study focuses on the standalone and joint inversion of airborne magnetic data and synthetic gravity data. The magnetic data were downloaded from the [Geoscience Australia GADDS Portal](https://portal.ga.gov.au/persona/gadds), while the gravity data were generated via forward modelling specifically for this exercise based on a derived iso-shell from magnetic inversion results. We cover the following steps:\n",
     "\n",
-    "- [Data imports and pre-processing](forrestania-data-os)\n",
-    "- [Standalone inversion of gravity data](forrestania-gravity-os)\n",
-    "- [Standalone inversion of magnetic data](forrestania-magnetics-os)\n",
-    "- [Joint cross-gradient inversion](forrestania-joint-os)\n",
-    "- [K-means clustering analysis](forrestania-kmeans-os)"
+    "- [Data imports and pre-processing](forrestania-data)\n",
+    "- [Standalone inversion of gravity data](forrestania-gravity)\n",
+    "- [Standalone inversion of magnetic data](forrestania-magnetics)\n",
+    "- [Joint cross-gradient inversion](forrestania-joint)\n",
+    "- [K-means clustering analysis](forrestania-kmeans)"
    ]
   },
   {
@@ -54,8 +54,12 @@
    "source": [
     "## Geological setting\n",
     "\n",
-    "To be completed..."
-   ]
+    "The Forrestania Greenstone Belt, located in the Youanmi Terrane of the Eastern Yilgarn Craton, hosts significant Ni-Cu-PGE mineralisation, primarily within komatiitic units (Frost, 2003; Collins et al., 2012). The belt is structurally complex, featuring synclines, faults, and shear zones that play a key role in sulphide localisation. It is bounded by granitic and gneissic basement, intruded by monzogranite and granodiorite, and transected by Proterozoic dolerite dykes (Perring et al., 1995). Multiple deformation events have remobilised nickel sulphides from their original host rocks into footwall sediments and granitic intrusions, resulting in both typical and atypical mineralisation styles, including granite-hosted sulphides (Collins et al., 2012).\n",
+    "\n",
+    "The study area is underlain mainly by granitic rocks, forming the basement to the Parker-Range–Hatters Hill greenstone belt immediately to the east. This N–S-trending belt is the main regional host of nickel sulphide deposits, which occur within narrow ultramafic units in an Archaean sequence of metabasalts and sulphidic sediments. Notable nearby deposits include Beautiful Sunday, Flying Fox, and New Morning.\n",
+    "\n",
+    "A prominent high-magnetic anomaly, trending E–W to ENE–WSW, lies immediately west of the greenstone belt. The anomaly’s orientation, strength, and coincident elevated nickel-in-soil geochemistry suggest it may represent a mafic intrusion—making it a key target for the current geophysical inversion."
+  ]
   },
   {
    "cell_type": "markdown",
