--- a/docs/case_studies/Forrestania/forrestania_noGA.ipynb
+++ b/docs/case_studies/Forrestania/forrestania_noGA.ipynb
@@ -93,7 +93,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset path: c:\\Users\\polyannar\\.conda\\envs\\SGB_training\\lib\\site-packages\\simpeg_drivers-assets\\Case studies\\Forrestania_SRTM1 Australia_MGA50_CSV.zip\n"
+      "Dataset path: c:\\Users\\MiraGeo\\.conda\\envs\\SGB_training\\lib\\site-packages\\simpeg_drivers-assets\\Case studies\\Forrestania_SRTM1 Australia_MGA50_CSV.zip\n"
      ]
     }
    ],
