--- a/docs/case_studies/Forrestania/forrestania_noGA.ipynb
+++ b/docs/case_studies/Forrestania/forrestania_noGA.ipynb
@@ -73,7 +73,11 @@
     "(forrestania-data-os)=\n",
     "## Data Preparation\n",
     "\n",
+    "This step involves importing and formatting the necessary datasets for inversion using Mira Geoscience's libraries. For your own inversion projects, you may streamline the data preparation process by using standard Python libraries, depending on your specific needs.\n",
+    "\n",
     "### Download and unzip the dataset\n",
+    "\n",
+    "We first need to unzip the package and import the data into a usable format.\n",
     "\n",
     "We first need to unzip the package and import the data into a usable format.\n",
     "\n",
