--- a/docs/case_studies/Forrestania/forrestania_noGA.ipynb
+++ b/docs/case_studies/Forrestania/forrestania_noGA.ipynb
@@ -346,12 +346,13 @@
     "\n",
     "##### Lookup/remove IGRF \n",
     "\n",
-    "Information about the inducing field strength at the time and location of the survey can be accessed from [NOAA](https://www.ngdc.noaa.gov/geomag/calculators/magcalc.shtml?useFullSite=true#igrfwmm)\n",
-    "The **inducing field parameters** at the time and location of the survey are\n",
+    "Information about the inducing field strength at the time and location of the survey can be accessed from the [NOAA site](https://www.ngdc.noaa.gov/geomag/calculators/magcalc.shtml?useFullSite=true#igrfwmm).\n",
+    "\n",
+    "The **inducing field parameters** calculated at the time and location of the survey are\n",
     "\n",
     "```{figure} ./images/NOAA_IGRF.png\n",
     "---\n",
-    "scale: 10%\n",
+    "scale: 20%\n",
     "---\n",
     "[Click to enlarge]\n",
     "```\n",
@@ -368,6 +369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Reduce the data by the inducing field strength\n",
     "mag_data = mag_dataframe[\"MAGCOMP\"] - 59294\n",
     "fig, ax = plt.subplots()\n",
     "im = plt.hist(mag_data, bins=100)\n",
@@ -380,7 +382,7 @@
    "id": "dfb824dd-4cc1-468d-9e57-0cfdcdddb712",
    "metadata": {},
    "source": [
-    "### Step 4: Detrend\n",
+    "#### Step 4: Detrend\n",
     "The local background field appears to be slightly lower (~283 nT) than the computed IGRF model, as most of the data away from the main anomaly are below 0. To avoid modelling this background trend, we can remove the median value. "
    ]
   },
@@ -404,7 +406,7 @@
    "id": "75825d5a-d08f-469f-b01b-eb851aebfba6",
    "metadata": {},
    "source": [
-    "#### Step 2c: Downsampling\n",
+    "#### Step 5: Downsampling\n",
     "\n",
     "We can downsample the data along lines to reduce the computation cost of the inversion. Since the average flight height of this survey was 60 m, we can confidently downsample the lines by the same amount without affecting the wavelengths contained in the data.\n",
     "\n",
