Split code docs and remove from build

--- a/docs/case_studies/Forrestania/forrestania.ipynb
+++ b/docs/case_studies/Forrestania/forrestania.ipynb
@@ -5,7 +5,9 @@
    "id": "34c04eea-4ec5-468f-90aa-0f4bea2b44f3",
    "metadata": {},
    "source": [
-    "# Forrestania: Gravity & Magnetics (ANALYST Pro Geophysics)\n",
+    "(forrestania)=\n",
+    "\n",
+    "# Forrestania: Joint grav/mag\n",
     "\n",
     "```{figure} ./images/landing.png\n",
     "---\n",
@@ -20,14 +22,22 @@
     "- [Standalone inversion of gravity data](forrestania-gravity)\n",
     "- [Standalone inversion of magnetic data](forrestania-magnetics)\n",
     "- [Joint cross-gradient inversion](forrestania-joint)\n",
-    "- [K-means clustering analysis](forrestania-kmeans)"
+    "- [K-means clustering analysis](forrestania-kmeans)\n",
+    "\n",
+    "```{note}\n",
+    "The following sections show how to run the same process using only open-source packages\n",
+    "- [Gravity](gravity-code)\n",
+    "- [Magnetics](magnetics-code)\n",
+    "```"
    ]
   },
   {
-  "cell_type": "markdown",
-  "id": "4638415a-bea8-4c31-b467-79cb864aeba9",
-  "metadata": {},
-  "source": [
+   "cell_type": "markdown",
+   "id": "4638415a-bea8-4c31-b467-79cb864aeba9",
+   "metadata": {},
+   "source": [
+    "(forrestania-geology)=\n",
+    "\n",
     "## Geological setting\n",
     "\n",
     "The Forrestania Greenstone Belt (FGB), located in the Youanmi Terrane of the Eastern Yilgarn Craton, hosts significant Ni-Cu-PGE mineralisation, primarily within komatiitic units (Frost, 2003; Collins et al., 2012). The belt is structurally complex, featuring synclines, faults, and shear zones that play a key role in sulphide localisation. It is bounded by granitic and gneissic basement, intruded by monzogranite and granodiorite, and transected by Proterozoic dolerite dykes (Perring et al., 1995). Multiple deformation events have remobilised nickel sulphides from their original host rocks into footwall sediments and granitic intrusions, resulting in both typical and atypical mineralisation styles, including granite-hosted sulphides (Collins et al., 2012).\n",
@@ -35,8 +45,8 @@
     "The study area is underlain mainly by granitic rocks, forming the basement to the Parker-Range–Hatters Hill greenstone belt immediately to the east. This N–S-trending belt is the main regional host of nickel sulphide deposits, which occur within narrow ultramafic units in an Archaean sequence of metabasalts and sulphidic sediments. Notable nearby deposits include Beautiful Sunday, Flying Fox, and New Morning.\n",
     "\n",
     "A prominent high-magnetic anomaly, trending E–W to ENE–WSW, lies immediately west of the greenstone belt. The anomaly’s orientation, strength, and coincident elevated nickel-in-soil geochemistry suggest it may represent a mafic intrusion—making it a key target for the current geophysical inversion."
-  ]
-},
+   ]
+  },
   {
    "cell_type": "markdown",
    "id": "7463eea7-04b6-466a-aa35-58269605c353",
@@ -51,7 +61,7 @@
     "\n",
     " - Airborne magnetic survey: `60472_AOI4.gdb`\n",
     " - Ground gravity survey: `Forrestania_Gravity_Station_trim_.csv`\n",
-      "   *Note: this is a synthetic dataset generated for inversion testing purposes.*\n",
+    "   *Note: this is a synthetic dataset generated for inversion testing purposes.*\n",
     " - Digital Elevation Model (DEM): `Forrestania_SRTM1 Australia_MGA50.ers`\n",
     "\n",
     "This can be done with a simple `drag & drop` to the viewport, or one at a time through the import menu. Once imported, the data can be activated for visualization.  \n",
@@ -360,8 +370,7 @@
     "\n",
     "Frost, K. M. (2003). Geology and nickel sulfide deposits of the Forrestania Greenstone Belt, Western Australia. *Mineralium Deposita*, 38(6), 648–663.\n",
     "\n",
-    "Perring, C. S., Barnes, S. J., & Hill, R. E. T. (1995). The Widgiemooltha dike suite: Geochemistry, emplacement, and implications for the evolution of the Eastern Goldfields Province, Western Australia. *Australian Journal of Earth Sciences*, 42(5), 489–502.",
-    "\n"
+    "Perring, C. S., Barnes, S. J., & Hill, R. E. T. (1995). The Widgiemooltha dike suite: Geochemistry, emplacement, and implications for the evolution of the Eastern Goldfields Province, Western Australia. *Australian Journal of Earth Sciences*, 42(5), 489–502.\n"
    ]
   }
  ],
