--- a/docs/inversion/regularization.ipynb
+++ b/docs/inversion/regularization.ipynb
@@ -5,6 +5,8 @@
    "id": "3a9fd274",
    "metadata": {},
    "source": [
+    "(regularization)=\n",
+    "\n",
     "# Constraints (Regularization)\n",
     "\n",
     "This section focuses on the regularization functions, or constraints, that can be used to inject \"geological knowledge\" into the inversion process. More specifically, this section covers the weighted least-squares regularization functions:\n",
