--- a/docs/case_studies/Forrestania/open_code.ipynb
+++ b/docs/case_studies/Forrestania/open_code.ipynb
@@ -18,6 +18,7 @@
     "\n",
     "- [Gravity inversion](gravity-code)\n",
     "- [Magnetics inversion](magnetics-code)\n",
+    "- [Joint inversion](joint-grav-mag-code)\n",
     "\n",
     "```{note}\n",
     "The steps taken in this tutorial are strongly based on the official [SimPEG Tutorials](https://simpeg.xyz/user-tutorials/).\n",
