--- a/docs/case_studies/Forrestania/python_code/joint_grav_mag.ipynb
+++ b/docs/case_studies/Forrestania/python_code/joint_grav_mag.ipynb
@@ -5,7 +5,7 @@
    "id": "34c04eea-4ec5-468f-90aa-0f4bea2b44f3",
    "metadata": {},
    "source": [
-    "(gravity-code)=\n",
+    "(joint-grav-mag-code)=\n",
     "\n",
     "# Joint cross-gradient inversion (Open-source version)\n",
     "\n",
