--- a/docs/case_studies/Forrestania/python_code/joint_grav_mag.ipynb
+++ b/docs/case_studies/Forrestania/python_code/joint_grav_mag.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "(joint-grav-mag-code)=\n",
     "\n",
-    "# Joint cross-gradient inversion (Open-source version)\n",
+    "# Joint cross-gradient\n",
     "\n",
-    "```{figure} ../images/landing.png\n",
+    "```{figure} ./images/open_code.png\n",
     "---\n",
     "scale: 30%\n",
     "align: right\n",
