--- a/docs/case_studies/Forrestania/python_code/magnetics.ipynb
+++ b/docs/case_studies/Forrestania/python_code/magnetics.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "(magnetics-code)=\n",
     "\n",
-    "# Magnetics (Open-source version)\n",
+    "# Magnetics\n",
     "\n",
-    "```{figure} ../images/landing.png\n",
+    "```{figure} ./images/open_code.png\n",
     "---\n",
     "scale: 30%\n",
     "align: right\n",
