Update image path

--- a/docs/case_studies/Forrestania/python_code/magnetics.ipynb
+++ b/docs/case_studies/Forrestania/python_code/magnetics.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "# Magnetics\n",
     "\n",
-    "```{figure} ./images/open_code.png\n",
+    "```{figure} ../images/open_code.png\n",
     "---\n",
     "scale: 30%\n",
     "align: right\n",
