--- a/docs/fundamentals/index.ipynb
+++ b/docs/fundamentals/index.ipynb
@@ -10,11 +10,11 @@
     "This module documents the use of [SimPEG](https://simpeg.xyz/) for geophysical data inversion with user-interface (UIjson) made available through the [Mira Geoscience-geoapps](https://mirageoscience-geoapps.readthedocs-hosted.com/) project. While the code itself has its own documentation, there is a need to demonstrate the effect of parameters controlling the inversion. This document is meant to be a reference guide with practical examples to help practitioners with their inversion work.\n",
     "\n",
     "\n",
-    "- [Background](fundamentals.ipynb): An overview of the inversion framework.\n",
+    "- [Background](background.ipynb): An overview of the inversion framework.\n",
     "\n",
     "- [Data Fit](data_misfit.ipynb): Assigning uncertainties and global target (data misfit).\n",
     "\n",
-    "- [Constraints](regularization.ipynb): Adding modeling constraints (regularization).\n",
+    "- [Regularization (Constraints)](regularization): Adding modeling constraints (regularization).\n",
     "\n",
     "- [Mesh Design](mesh_design.ipynb): Designing an inversion mesh.\n",
     "\n",
@@ -24,6 +24,14 @@
     "\n",
     "![inversion_ui](./images/inversion_ui.png)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2308931b-c540-4082-8b20-b4d011e127af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
