--- a/docs/tutorials/airborne_tem.ipynb
+++ b/docs/tutorials/airborne_tem.ipynb
@@ -139,7 +139,7 @@
     "Refinement strategy used for the atem modeling.\n",
     "```\n",
     "\n",
-    "See [Mesh creation](../inversion/mesh_design.ipynb) section for general details on the parameters."
+    "See [Mesh creation](mesh_design) section for general details on the parameters."
    ]
   },
   {
