--- a/docs/tutorials/tipper.ipynb
+++ b/docs/tutorials/tipper.ipynb
@@ -102,7 +102,7 @@
     "Refinement strategy used for the tipper modeling.\n",
     "```\n",
     "\n",
-    "See [Mesh creation](../inversion/mesh_design.ipynb) section for general details on the parameters."
+    "See [Mesh creation](mesh_design) section for general details on the parameters."
    ]
   },
   {
