--- a/docs/tutorials/dc_resistivity.ipynb
+++ b/docs/tutorials/dc_resistivity.ipynb
@@ -99,7 +99,7 @@
     "Refinement strategy used for the direct-current modeling.\n",
     "```\n",
     "\n",
-    "See [Mesh creation](../inversion/mesh_design.ipynb) section for general details on the parameters.\n"
+    "See [Mesh creation](mesh_design) section for general details on the parameters.\n"
    ]
   },
   {
